--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 
     implementation 'io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE'
     implementation 'org.postgresql:postgresql:42.7.4'
@@ -46,7 +47,7 @@ dependencies {
     implementation 'software.amazon.awssdk:netty-nio-client'
 
     implementation 'org.mnode.ical4j:ical4j:4.1.0'
-    
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
