--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.2'
     id 'io.spring.dependency-management' version '1.1.7'
+    id 'jacoco'
 }
 
 group = 'com.whatstheplan'
@@ -38,7 +39,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-    implementation 'io.r2dbc:r2dbc-postgresql:0.8.13.RELEASE'
+    implementation 'org.postgresql:r2dbc-postgresql:1.0.7.RELEASE'
     implementation 'org.postgresql:postgresql:42.7.4'
     implementation 'org.flywaydb:flyway-core'
     implementation "org.flywaydb:flyway-database-postgresql"
@@ -77,3 +78,5 @@ tasks.named('test') {
         throw new GradleException("byte-buddy-agent JAR not found in test runtime classpath")
     }
 }
+
+build.dependsOn jacocoTestReport
